implement comment screen backend and frontend